--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
  <center>
 <h1>I AM NEELIMA</h1></center>
-<div class="name"><h2>My name is BONTHU Neelima.</h2></div>
+<div class="name"><h2>ABOUT ME</h2></div>
 <div class="from"><p>Iam from godithippa,allavaram.my education details iam parsuing B.Tech final year in BVC engineering collage odalarevu.</p></div>
 <div class="para"><p>Iam completed my intermediate in APSWR junior college Godi.I completed my SSC in Z.P.P.H high school in Allavaram </p></div> 
 <div class="para"><p>my skills are good communication skills and coding skills.</p></div> 
